# fallout_terminal_sound

./: Cargo.toml  README.md
src/: main.rs
