[package]
name = "fallout_terminal_sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rodio]
version = "0.16"
default-features = false
features = ["wav"]

[[bin]]
name = "fo_term_sound"
path = "src/main.rs"

[profile.release]
panic = "abort"
lto = "thin"
strip = true
